--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/composition-api": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
     "vue-class-component": "^7.2.3",
