--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.172",
     "@vue/composition-api": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
