--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue2-perfect-scrollbar": "^1.5.0",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
