--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vue/composition-api": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.20",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
