--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
     "vue-class-component": "^7.2.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-property-decorator": "^9.1.2",
+    "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.3",
