--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-composition-helpers": "^1.0.23"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -46,7 +47,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
-    "eslint": "^6.7.2",
+    "eslint": "^7.6.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
