--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
+    "vue2-helpers": "^1.1.5",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
