--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
     "vue-class-component": "^7.2.3",
+    "vue-currency-input": "^2.1.2",
     "vue-jwt-decode": "^0.1.0",
     "vue-property-decorator": "^9.1.2",
     "vue-route-middleware": "^1.0.7",
@@ -28,7 +29,6 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
-    "vuetify-money": "^1.2.0",
     "vuex": "^3.4.0",
     "vuex-composition-helpers": "^1.0.23"
   },
