--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
+    "vuetify-mask": "^1.1.2",
     "vuex": "^3.4.0",
     "vuex-composition-helpers": "^1.0.23"
   },
