--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "^5.0.4",
-    "@vue/cli-plugin-unit-mocha": "^5.0.4",
+    "@vue/cli-plugin-unit-mocha": "^4.5.17",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "^5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
@@ -60,7 +60,10 @@
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "4.9.1"
   },
   "packageManager": "yarn@3.0.2"
 }
