--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
-VUE_APP_SERVER_URL=http://ffars-api.test
-VUE_APP_BASE_URL=http://ffars-api.test
+VUE_APP_SERVER2_URL=http://ffars-api.test
+VUE_APP_SERVER1_URL=http://ffars-api.test
+
