--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-VUE_APP_SERVER2_URL=http://196.192.73.13
-VUE_APP_SERVER1_URL=http://196.192.73.13
+VUE_APP_SERVER2_URL=/
+VUE_APP_SERVER1_URL=/
 
 
-VUE_APP_SERVER_URL=http://196.192.73.13
-VUE_APP_BASE_URL=http://196.192.73.13
+VUE_APP_SERVER_URL=http:/
+VUE_APP_BASE_URL=http:/
