--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target-lib --inline-vue --inline-css",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -59,7 +59,8 @@
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "typescript": "~4.1.5",
+    "typescript": "4.5.0",
+    "vue-cli-plugin-compression": "~2.0.0",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "2.6.14",
     "vuetify-loader": "^1.7.0",
