--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/jquery": "^3.5.14",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -59,7 +60,7 @@
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "typescript": "4.5.0",
+    "typescript": "4.3.5",
     "vue-cli-plugin-compression": "~2.0.0",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "2.6.14",
