--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typescript": "4.4.4",
     "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.8",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-cli-plugin-compression": "~2.0.0",
     "webpack": "^5.73.0",
