--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
-VUE_APP_SERVER_URL=http://ffars-api.test
-
+VITE_APP_SERVER_URL=http://ffars-api.test
+VITE_APP_BASE_APP_NAME=FFARS
+VITE_APP_PUBLIC_PATH=/
