--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.172",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.1",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
     "lodash": "^4.17.21",
@@ -41,6 +42,7 @@
     "@types/jquery": "^3.5.14",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^5.2.4",
+    "@types/node": "^18.11.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vitejs/plugin-vue2": "^2.0.0",
@@ -57,6 +59,7 @@
     "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.8",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-singlefile": "^0.12.3",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-cli-plugin-compression": "~2.0.0",
     "webpack": "^5.73.0",
