--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vite --port 4000",
-    "build": "vite build --watch",
+    "build": "vite build",
+    "dev:build": "vite build --watch",
     "test:unit": "vite test:unit",
     "preview": "vite preview",
     "lint": "vite lint"
