--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
-VITE_APP_SERVER_URL=http://ffars-api.test
-VITE_APP_BASE_APP_NAME=FFARS
-VITE_APP_PUBLIC_PATH=/
+VITE_APP_SERVER_URL='//ffars-api.test'
+VITE_APP_BASE_APP_NAME='FFARS'
+VITE_APP_PORT='4000'
+VITE_APP_PUBLIC_PATH='/'
