remove package-lock

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "FFARS",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "serve": "vite",
     "build": "vite build",
