--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^5.2.4",
     "@types/node": "^18.11.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-vue2": "^2.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
@@ -56,7 +56,7 @@
     "eslint-plugin-vue": "8",
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
-    "typescript": "4.4.4",
+    "typescript": "^4.8.4",
     "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.8",
     "vite-plugin-compression": "^0.5.1",
