--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ VITE_APP_SERVER_URL='//ffars-api.test'
 VITE_APP_BASE_APP_NAME='FFARS'
 VITE_APP_PORT='4000'
 VITE_APP_PUBLIC_PATH='/'
+VITE_APP_REPORT_SERVER_URL=
 VITE_APP_REPORT_USER_NAME=''
 VITE_APP_REPORT_PASSWORD=''
 
