--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@types/lodash": "^4.14.172",
     "axios": "^0.21.1",
-    "chart.js": "^3.9.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
+    "fusioncharts": "^3.21.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
     "lodash": "^4.17.21",
@@ -28,12 +28,14 @@
     "vue-chartjs": "^4.1.2",
     "vue-class-component": "^7.2.3",
     "vue-currency-input": "^2.1.2",
+    "vue-fusioncharts": "^3.2.0",
     "vue-jwt-decode": "^0.1.0",
     "vue-property-decorator": "^9.1.2",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
     "vue2-brace-editor": "^2.0.2",
     "vue2-perfect-scrollbar": "^1.2.0",
+    "vue3-chart-v2": "^0.8.3",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuetify-mask": "^1.1.2",
