--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
+    "element-ui": "^2.15.14",
     "fusioncharts": "^3.21.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
