--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_APP_SERVER_URL='http://localhost:3200'
-VITE_APP_SERVER_URL='/'
+VITE_APP_SERVER_URL='http://localhost:3200'
+# VITE_APP_SERVER_URL='/'
 VITE_APP_BASE_APP_NAME='IHPCC'
 VITE_APP_PORT='4000'
 VITE_APP_PUBLIC_PATH='/'
