--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ VITE_APP_BASE_APP_NAME='IHPCC'
 VITE_APP_PORT='4000'
 VITE_APP_PUBLIC_PATH='/'
 VITE_APP_REPORT_SERVER_URL=
-VITE_APP_REPORT_USER_NAME=''
-VITE_APP_REPORT_PASSWORD=''
+VITE_APP_REPORT_USER_NAME='jasperadmin'
+VITE_APP_REPORT_PASSWORD='K@r@ng@0020@'
